[package]
name = "aoc-2019"
version = "0.1.0"
authors = ["mich101mich <mich101mich@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rayon = "1.2.1"
rand = "0.7.2"
regex = "1.3.1"
scan_fmt = "0.2.4"
permutohedron = "0.2.4"
piston = "0.49.0"
piston_window = "0.105.0"
