[package]
name = "aoc-2019"
version = "0.1.0"
authors = ["mich101mich <mich101mich@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rayon = "1.2"
rand = "0.8"
regex = "1.3"
sscanf = { git="https://github.com/mich101mich/sscanf" }
permutohedron = "0.2"
num-bigint = "0.4"
